Bug 395082 - Incorrect handling of mouse clicks in plugin "Documents", "Tree Mode"
Summary: Incorrect handling of mouse clicks in plugin "Documents", "Tree Mode"
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 17.12.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-06 11:14 UTC by Alexander
Modified: 2018-07-14 15:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2018-06-06 11:14:43 UTC
Steps to Reproduce:
1. Settings -> Configure Kate -> Documents -> View Mode = "Tree Mode"
2. Open several documents.
3. Click directory in "Documents" window.

Actual Results:  
Left mouse click collapses and immediately unfolds the directory.
Right mouse click collapses and shows the context menu.

Expected Results:  
Left mouse click only collapses or only unfolds the directory.
Right mouse click only shows the context menu.
Comment 1 Christoph Cullmann 2018-07-14 15:57:26 UTC
Git commit 1ed0c4762affe14a2e43bf2e2b24232a100830f1 by Christoph Cullmann.
Committed on 14/07/2018 at 15:54.
Pushed by cullmann into branch 'master'.

better handling of mouse clicks
be consistent with the project tree view

1) single click activates document, like in project tree
2) non-document tree parts collapse/expand like normal

M  +1    -6    addons/filetree/katefiletree.cpp

https://commits.kde.org/kate/1ed0c4762affe14a2e43bf2e2b24232a100830f1