better handling of mouse clicks be consistent with the project tree view

1) single click activates document, like in project tree
2) non-document tree parts collapse/expand like normal

BUG: 395082